popup-stuck/overflow-fix

--- a/Project/css/main.scss
+++ b/Project/css/main.scss
@@ -660,9 +660,9 @@ a {
     }
 
     #slider {
-        position: fixed;
+        position: absolute;
         left: 0;
-        padding-top: 4em;
+        padding-top: 8em;
         padding-left: .8em;
     }
     
